--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -5,6 +5,44 @@ body {
 	color: #222;
 }
 
+header {
+	display: inline-block;
+	width: 100%;
+}
+
+footer {
+	position: absolute;
+	display: block;
+	width: 100%;
+	bottom: 0;
+	background: #f2f2f2;
+	color: #666;
+	border-top: 1px solid #e4e4e4
+}
+
 li {
 	list-style-type: none;
+	display: inline-block;
+	padding: 1px 0 1px 5px;
+}
+
+.containter {
+	display: inline-block;
+}
+
+.head_menu {
+	display: inline-block;
+	float: right;
+}
+
+.l_footer, .r_footer {
+	display: inline-block;
+}
+
+.l_footer {
+	float: left;
+}
+
+.r_footer {
+	float: right;
 }
