--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,16 +1,20 @@
 body {
+	height: 100%;
+	display: block;
 	overflow: hidden;
 	font-family: arial,sans-serif;
 	font-size: 13px;
 	background: #fff;
 	color: #222;
 	margin: 0;
-	padding: 10px;
 }
 
 header {
 	display: inline-block;
+	color: #404040;
 	width: 100%;
+	margin-left: -40px;
+	padding: 10px;
 }
 
 footer {
@@ -20,7 +24,8 @@ footer {
 	bottom: 0;
 	background: #f2f2f2;
 	color: #666;
-	border-top: 1px solid #e4e4e4
+	border-top: 1px solid #e4e4e4;
+
 }
 
 li {
@@ -29,13 +34,35 @@ li {
 	padding-left: 27px;
 }
 
-.logo img {
-	height: 200px;
-  width: 500px;
-}
-
 .containter {
 	display: inline-block;
+}
+
+.container img {
+	height: 95px;
+  width: 269px;
+  margin-top: 8%;
+  padding: 20px;
+}
+
+.g-search {
+	display: block;
+	font-family: arial,sans-serif;
+	padding: 15px;
+	background-color: #fff;
+  border: 1px solid #d9d9d9;
+  border-top-color: #c0c0c0;
+  width: 539px;
+  height: 14px;
+  vertical-align: top;
+}
+
+input[text] {
+	-webkit-appearance: none;
+}
+
+.buttons {
+	display: block;
 }
 
 .head_menu {
@@ -45,13 +72,16 @@ li {
 
 .l_footer, .r_footer {
 	display: inline-block;
+	padding-top: -2px;
 
 }
 
 .l_footer {
 	float: left;
+	margin-left: -38px;
 }
 
 .r_footer {
 	float: right;
+	margin-right: 20px;
 }
