--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -14,7 +14,7 @@ header {
 	color: #404040;
 	width: 100%;
 	margin-left: -40px;
-	padding: 10px;
+	padding: 9px;
 }
 
 footer {
@@ -49,7 +49,7 @@ li {
 	display: block;
 	font-family: arial,sans-serif;
 	padding: 0;
-	margin: 15px;
+	margin: 10px;
 	background-color: #fff;
   border: 1px solid #d9d9d9;
   border-top-color: #c0c0c0;
@@ -58,20 +58,42 @@ li {
   vertical-align: top;
 }
 
-input[text] {
-	display: block;
-	position: relative;
-	-webkit-appearance: none;
-	width: 100%;
-	height: 100%;
+input {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
 }
 
-input[button] {
-	padding: 10px;
+input[text] {
+	display: block-inline;
+	position: relative;
+	float: left;
+	width: 90%;
+	height: 90%;
+	border: none;
 }
 
 .buttons {
 	display: block;
+}
+
+.btn {
+	height: 29px;
+  line-height: 27px;
+	background-color: #f5f5f5;
+	padding: 10px;
+	cursor: default;
+  font-family: arial,sans-serif;
+  font-size: 11px;
+  font-weight: bold;
+  margin: 11px 8px;
+  min-width: 54px;
+  padding: 0 8px;
+  text-align: center;
+  border: 1px solid #c6c6c6;
+  box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+  color: #444;
+  border-radius: 2px;
 }
 
 .head_menu {
