--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -64,19 +64,6 @@ span.tg-arrow {
   padding: 20px;
 }
 
-.g-search {
-	display: inline-block;
-	font-family: arial,sans-serif;
-	padding: 0;
-	margin: 10px;
-	background-color: #fff;
-  border: 1px solid #d9d9d9;
-  border-top-color: #c0c0c0;
-  width: 539px;
-  height: 27px;
-  vertical-align: top;
-}
-
 .apps-ico {
 	position: relative;
 	top: 6px;
@@ -94,21 +81,46 @@ input {
     appearance: none;
 }
 
-.search {
-	display: inline-block;
-	position: relative;
-	float: left;
-	width: 90%;
-	height: 90%;
-	border: none;
-	margin: 2px;
-	padding: 5px;
+.g-search {
+	display: block;
+	font-family: arial,sans-serif;
+	padding: 0;
+	margin: 10px;
+	background-color: #fff;
+  border: 1px solid #d9d9d9;
+  border-top-color: #c0c0c0;
+  max-width: 568px;
+  height: 28px;
+  vertical-align: top;
+  white-space: nowrap;
+  -webkit-box-sizing: border-box;
 }
 
-.search:focus {
+.g-search input[text] {
+  display: block;
+  position: relative;
+	line-height: 0;
+	white-space: nowrap;
+	color: #222;
+	font-size: small;
 	border: none;
-	outline: none;
-
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  height: 28px;
+  z-index: 6;
+  left: 0px;
+  background: url(data:image/gif;base64,R0lGODlhAQABAID/AMDAwAAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw%3D%3D) transparent;
+  -webkit-appearance: textfield;
+  -webkit-rtl-ordering: logical;
+  -webkit-user-select: text;
+  color: initial;
+  letter-spacing: normal;
+  word-spacing: normal;
+  text-transform: none;
+  text-indent: 0px;
+  text-shadow: none;
+  text-align: start;
 }
 
 .mic img {
