--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -14,6 +14,7 @@ header {
 	color: #404040;
 	width: 100%;
 	margin-left: -40px;
+	margin-bottom: 10px;
 	padding: 0px;
 }
 
@@ -39,7 +40,7 @@ footer li {
 li {
 	list-style-type: none;
 	display: inline-block;
-	padding-left: 23px;
+	padding-left: 25px;
 	padding-top: 0;
 }
 
@@ -61,6 +62,7 @@ span.tg-arrow {
 	height: 95px;
   width: 269px;
   margin-top: 8%;
+  margin-bottom: 2px;
   padding: 20px;
 }
 
@@ -82,10 +84,11 @@ input {
 }
 
 .g-search {
+	position: relative;
 	display: block;
 	font-family: arial,sans-serif;
 	padding: 0;
-	margin: 10px;
+	margin: 0 5px 4px 5px;
 	background-color: #fff;
   border: 1px solid #d9d9d9;
   border-top-color: #c0c0c0;
@@ -93,7 +96,6 @@ input {
   height: 28px;
   vertical-align: top;
   white-space: nowrap;
-  -webkit-box-sizing: border-box;
 }
 
 .g-search input[text] {
@@ -104,27 +106,27 @@ input {
 	color: #222;
 	font-size: small;
 	border: none;
-  padding: 0;
+  padding-left: 7px;
   margin: 0;
   width: 100%;
-  height: 28px;
+  height: 27px;
   z-index: 6;
   left: 0px;
   background: url(data:image/gif;base64,R0lGODlhAQABAID/AMDAwAAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw%3D%3D) transparent;
-  -webkit-appearance: textfield;
-  -webkit-rtl-ordering: logical;
-  -webkit-user-select: text;
-  color: initial;
   letter-spacing: normal;
   word-spacing: normal;
   text-transform: none;
   text-indent: 0px;
   text-shadow: none;
-  text-align: start;
+	-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+  -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+  box-sizing: border-box; 
 }
 
 .mic img {
-	position: relative;
+	position: absolute;
+	right: 3px;
+	top: 1px;
 	display: inline-block;
 	float: right;
 	width: 14px;
@@ -133,6 +135,10 @@ input {
 	margin: 0;
 	vertical-align: middle;
   opacity: 0.6;
+}
+
+.v_search:hover {
+	cursor: pointer;
 }
 
 .buttons {
@@ -148,12 +154,11 @@ input {
   font-family: arial,sans-serif;
   font-size: 11px;
   font-weight: bold;
-  margin: 11px 8px;
+  margin: 11px 6px;
   min-width: 54px;
   padding: 0 8px;
   text-align: center;
-  border: 1px solid #c6c6c6;
-  box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+  border: 1px solid rgba(0,0,0,0.1);
   color: #444;
   border-radius: 2px;
 }
