--- a/css/google.css
+++ b/css/google.css
@@ -24,6 +24,19 @@ header li {
 	padding-right: 1px;
 }
 
+a {
+	color: #404040;
+	text-decoration: none;
+}
+
+a:hover, a:active {
+	text-decoration: underline;
+}
+
+a:visited {
+	text-decoration: none;
+}
+
 footer {
 	position: absolute;
 	display: block;
@@ -33,6 +46,10 @@ footer {
 	color: #666;
 	line-height: 14px;
 	border-top: 1px solid #e4e4e4;
+}
+
+footer a {
+	color: #666;
 }
 
 footer li {
