--- a/css/results.css
+++ b/css/results.css
@@ -31,6 +31,7 @@ footer {
 	color: #666;
 	line-height: 14px;
 	border-top: 1px solid #e4e4e4;
+	padding-left: 50px;
 }
 
 footer a {
@@ -200,9 +201,39 @@ input {
   opacity: 0.6;
 }
 
+.point {
+	color: #aaa;
+}
+
+.point.circle {
+	border-radius: 100%;
+  display: inline-block;
+  height: 8px;
+  margin: 7px 5px 10px 1px;
+  vertical-align: middle;
+  width: 8px;
+	background: #9A9FA4;
+  box-shadow: 0 0 0 1px #97999D;
+}
+
+.location-main {
+	color: #aaa;
+}
+
+.location-info {
+	margin-left: 24px;
+}
+
+.location-info li {
+	margin: 0;
+	padding: 0;
+}
+
 .v_search:hover {
 	cursor: pointer;
 }
+
+
 
 span.tg-arrow {
 	position: relative;
