--- a/css/results.css
+++ b/css/results.css
@@ -1,7 +1,6 @@
 body {
 	height: 100%;
 	display: block;
-	overflow: hidden;
 	font-family: arial,sans-serif;
 	font-size: 13px;
 	background: #fff;
@@ -31,7 +30,7 @@ footer {
 	color: #666;
 	line-height: 14px;
 	border-top: 1px solid #e4e4e4;
-	padding-left: 72px;
+	padding-left: 0px;
 }
 
 footer a {
@@ -54,6 +53,7 @@ table {
   border-spacing: 2px;
   border-color: gray;
   border-collapse: collapse;
+  margin: 30px auto 30px;
 }
 
 tbody {
@@ -73,6 +73,11 @@ td, th {
   vertical-align: inherit;
   padding: 0;
   text-align: center;
+  width: 20px;
+}
+
+.footer-section {
+	padding-left: 70px;
 }
 
 .pages span {
@@ -435,6 +440,7 @@ input {
 }
 
 .rs-pages {
+	position: relative;
 	border-collapse: collapse;
   text-align: left;
   width: 528px;
