--- a/css/results.css
+++ b/css/results.css
@@ -326,6 +326,14 @@ input {
 	height: 18px;
 }
 
+.acc a {
+	color: #404040;
+}
+
+.acc a:hover {
+	color: #000;
+}
+
 .mic img {
 	position: absolute;
 	right: 3px;
