--- a/css/google.css
+++ b/css/google.css
@@ -86,6 +86,7 @@ span.tg-arrow {
 }
 
 .apps {
+	position: relative;
 	display: inline-block;
 	background: url('../img/apps-nav.png');
 	background-position: 30px -52px;
@@ -95,6 +96,7 @@ span.tg-arrow {
 	opacity: .55;
 	margin: 0;
 	padding: 0;
+	top: 11px;
 }
 
 .apps:hover {
@@ -197,6 +199,8 @@ input {
 .head_menu {
 	display: inline-block;
 	float: right;
+	padding: 0;
+	margin-top: -10px;
 }
 
 .l_footer, .r_footer {
