--- a/css/google.css
+++ b/css/google.css
@@ -15,7 +15,7 @@ header {
 	width: 100%;
 	margin-left: -40px;
 	margin-bottom: 10px;
-	padding: 0px;
+	padding: 0;
 }
 
 header li {
@@ -63,7 +63,7 @@ li {
 	padding-top: 0;
 }
 
-span.tg-arrow {
+.tg-arrow {
 	position: relative;
 	border-top: 4px solid #404040;
   border-left: 4px dashed transparent;
@@ -87,7 +87,7 @@ span.tg-arrow {
 
 .apps {
 	position: relative;
-	display: inline-block;
+	display: block;
 	background: url('../img/apps-nav.png');
 	background-position: 30px -52px;
 	width: 30px;
@@ -125,7 +125,6 @@ input {
   border-top-color: #c0c0c0;
   max-width: 568px;
   height: 28px;
-  vertical-align: top;
   white-space: nowrap;
 }
 
@@ -142,15 +141,15 @@ input {
   width: 100%;
   height: 27px;
   z-index: 6;
-  left: 0px;
+  left: 0;
   background: url(data:image/gif;base64,R0lGODlhAQABAID/AMDAwAAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw%3D%3D) transparent;
   letter-spacing: normal;
   word-spacing: normal;
   text-transform: none;
-  text-indent: 0px;
+  text-indent: 0;
   text-shadow: none;
   font: 16px arial,sans-serif;
-  line-height: 1.2em !important;
+  line-height: 1.2em;
 	-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
   -moz-box-sizing: border-box;    /* Firefox, other Gecko */
   box-sizing: border-box; 
@@ -160,7 +159,7 @@ input {
 	position: absolute;
 	right: 3px;
 	top: 1px;
-	display: inline-block;
+	display: block;
 	float: right;
 	width: 14px;
 	height: 19px;
@@ -182,7 +181,6 @@ input {
 	height: 29px;
   line-height: 27px;
 	background-color: #f5f5f5;
-	padding: 10px;
 	cursor: default;
   font-family: arial,sans-serif;
   font-size: 11px;
@@ -197,7 +195,7 @@ input {
 }
 
 .head_menu {
-	display: inline-block;
+	display: block;
 	float: right;
 	padding: 0;
 	margin-top: -10px;
