--- a/css/results.css
+++ b/css/results.css
@@ -268,9 +268,9 @@ input {
 	background-image: -ms-linear-gradient(top,#f5f5f5,#f1f1f1);
 	background-image: -o-linear-gradient(top,#f5f5f5,#f1f1f1);
 	background-image: linear-gradient(top,#f5f5f5,#f1f1f1);
-	-webkit-box-shadow: 0 1px 1px rgba(0,0,0,.1);
-	-moz-box-shadow: 0 1px 1px rgba(0,0,0,.1);
-	box-shadow: 0 1px 1px rgba(0,0,0,.1);
+	-webkit-box-shadow: 0px 1px 1px rgba(0,0,0,.1);
+	-moz-box-shadow: 0px 1px 1px rgba(0,0,0,.1);
+	box-shadow: 0px 1px 1px rgba(0,0,0,.1);
 	-webkit-border-radius: 2px;
 	-moz-border-radius: 2px;
 	color: #777;
@@ -546,7 +546,7 @@ input {
 
 .rs-pages {
 	position: relative;
-	display: block;
+	display: inline-block;
 	border-collapse: collapse;
   text-align: left;
   width: 528px;
